# architecture_course

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/grpc_server/: CMakeLists.txt  ecommerce.proto  ecommerce_service_impl.cpp  ecommerce_service_impl.h  in_memory_storage.cpp  in_memory_storage.h  main.cpp
src/grpc_server/cfg/: cfg.toml
src/json_rpc_server/: CMakeLists.txt  json_rpc_server.cpp  json_rpc_server.h  json_rpc_server.hpp  main.cpp  method_registry.cpp  method_registry.h  secret_data_manager.cpp  secret_data_manager.h  secret_data_manager.hpp  server.cpp  server.h  session.cpp  session.h  test.txt
src/json_rpc_server/cfg/: cfg.toml
src/logger/: logger.cpp  logger.h
src/long_polling_chat_server/: CMakeLists.txt  chat_manager.cpp  chat_manager.h  main.cpp  test.txt
src/long_polling_chat_server/cfg/: cfg.toml
src/rest_server/: CMakeLists.txt  main.cpp  test.txt
src/rest_server/cfg/: cfg.toml
src/soap_server/: CMakeLists.txt  main.cpp  soap_server.cpp  soap_server.h  task.cpp  task.h  task_manager.cpp  task_manager.h  test.txt
src/soap_server/cfg/: cfg.toml  taskmanagement.wsdl
src/sse_example_server/: CMakeLists.txt  main.cpp  test.txt
src/webhook_example_server/: CMakeLists.txt  main.cpp  test.txt
src/websocket_auction_server/: CMakeLists.txt  auction_manager.cpp  auction_manager.h  main.cpp  server.cpp  server.h  session.cpp  session.h  test.txt
src/websocket_auction_server/cfg/: cfg.toml
